# timeTracker

./: .env.example  .gitignore  Cargo.toml  README.md  plan.md  slo_mac.json
assets/icons/: README.md
assets/macos/: Entitlements.plist
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: auth.rs  crypto.rs  focus.rs  lib.rs  metrics.rs  paths.rs  queue.rs  state.rs
crates/agent-daemon/: Cargo.toml
crates/agent-daemon/src/: capture.rs  macos_perms.rs  main.rs  net.rs  policy.rs
crates/agent-login-macos/: Cargo.toml
crates/agent-login-macos/src/: main.rs
crates/agent-ui-macos/: Cargo.toml  build.rs
crates/agent-ui-macos/src/: macos_loginitem.m  main.rs
crates/agent-ui-windows/: Cargo.toml
crates/agent-ui-windows/src/: main.rs
panel/: app.js  index.html  styles.css
scripts/: macos_notarize.sh  macos_pack.sh  macos_sign.sh  slo_idle_check.py  slo_idle_check.sh  smoke.sh  win_run.ps1  win_smoke.ps1
