[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
aes-gcm = { version = "0.10" }
zstd = "0.13"
tracing = "0.1"
sysinfo = { version = "0.30" }
tokio = { version = "1", features = ["rt", "time", "fs", "macros"] }
