[package]
name = "agent-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
dotenvy = "0.15"
sysinfo = { version = "0.30" }
tower-http = { version = "0.5", features = ["fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_SystemInformation",
] }
