[package]
name = "agent-ui-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.25"
objc = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cc = { version = "1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[build-dependencies]
cc = "1"

[[bin]]
name = "agent-ui-macos"
path = "src/main.rs"
