[package]
name = "agent-ui-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde_json = "1"
winreg = "0.52"
ico = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
] }

[[bin]]
name = "agent-ui-windows"
path = "src/main.rs"
